--- a/sysadmin_base/views/product_category_views.xml
+++ b/sysadmin_base/views/product_category_views.xml
@@ -4,21 +4,21 @@
         <field name="model">product.category</field>
         <field name="inherit_id" ref="product.product_category_form_view"/>
         <field name="arch" type="xml">
-            <xpath expr="//group[@name='first']" position="after">
+            <group name="first" position="after">
                 <group>
                     <field name="show_hardware_properties"/>
                 </group>
-            </xpath>
+            </group>
         </field>
     </record>
     <record id="product_template_search_form_view_stock" model="ir.ui.view">
         <field name="model">product.template</field>
         <field name="inherit_id" ref="stock.product_template_search_form_view_stock"/>
         <field name="arch" type="xml">
-            <xpath expr="//filter[@name='activities_upcoming_all']" position="after">
+            <filter name="activities_upcoming_all" position="after">
                 <separator/>
                 <filter string="Internal Equipment" name="internal_equipment" domain="[('internal_equipment','=',True)]"/>
-            </xpath>
+            </filter>
         </field>
     </record>
 </odoo>
