--- a/sysadmin_base/views/hr_employee_views.xml
+++ b/sysadmin_base/views/hr_employee_views.xml
@@ -5,14 +5,14 @@
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="type">form</field>
         <field name="arch" type="xml">
-            <xpath expr="//page[@name='public']" position="after">
+            <page name="public" position="after">
                 <page name="internal_preferences" string="Internal Preferences">
                     <group>
                         <field name="has_dialoga_access"/>
                         <field name="is_trainee"/>
                     </group>
                 </page>
-            </xpath>
+            </page>
         </field>
     </record>
     <record id="view_employee_tree" model="ir.ui.view">
@@ -20,9 +20,9 @@
         <field name="inherit_id" ref="hr.view_employee_tree"/>
         <field name="type">tree</field>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='work_phone']" position="after">
+            <field name="work_phone" position="after">
                 <field name="has_dialoga_access"/>
-            </xpath>
+            </field>
         </field>
     </record>
     <record id="view_employee_filter" model="ir.ui.view">
@@ -30,12 +30,12 @@
         <field name="inherit_id" ref="hr.view_employee_filter"/>
         <field name="type">search</field>
         <field name="arch" type="xml">
-            <xpath expr="//filter[@name='activities_upcoming_all']" position="after">
+            <filter name="activities_upcoming_all" position="after">
                 <filter name="dialoga_access" string="Has Dialoga access" domain="[('has_dialoga_access','=',True)]"/>
-            </xpath>
-            <xpath expr="//filter[@name='group_job']" position="after">
+            </filter>
+            <filter name="group_job" position="after">
                 <filter name="group_is_trainee" string="Is trainee" domain="[]" context="{'group_by':'is_trainee'}"/>
-            </xpath>
+            </filter>
         </field>
     </record>
 </odoo>
