--- a/sysadmin_base/views/product_template_views.xml
+++ b/sysadmin_base/views/product_template_views.xml
@@ -5,21 +5,13 @@
         <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="type">form</field>
         <field name="arch" type="xml">
-            <xpath expr="//div[@name='options']" position="replace">
-                <div id="sale_ok_div">
-                    <field name="sale_ok"/>
-                    <label for="sale_ok"/>
-                </div>
-                <div id="internal_equipment_div">
+            <xpath expr="//div/field[@name='sale_ok']/.." position="after">
+                <div>
                     <field name="internal_equipment"/>
                     <label for="internal_equipment"/>
                 </div>
-                <div id="purchase_ok_div">
-                    <field name="purchase_ok"/>
-                    <label for="purchase_ok"/>
-                </div>
             </xpath>
-            <xpath expr="//page[@name='sales']" position="after">
+            <page name="sales" position="after">
                 <page string="Technical Properties" attrs="{'invisible':[('internal_equipment','=',False)]}" name="technical_properties">
                     <group>
                         <group name="general_information" string="General Information">
@@ -35,7 +27,7 @@
                         </group>
                     </group>
                 </page>
-            </xpath>
+            </page>
         </field>
     </record>
 </odoo>
