--- a/sysadmin_base/views/hr_employee_views.xml
+++ b/sysadmin_base/views/hr_employee_views.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
+
     <record id="view_employee_form" model="ir.ui.view">
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
@@ -7,14 +8,23 @@
         <field name="arch" type="xml">
             <page name="public" position="after">
                 <page name="internal_tools" string="Internal Tools">
+                    <button class="oe_stat_button" name="employee_item_count" icon="fa-th-list" type="object">
+                        <div class="o_field_widget o_stat_info">
+                            <span class="o_stat_text"> Items</span>
+                        </div>
+                    </button>
                     <group>
                         <field name="has_dialoga_access"/>
                         <field name="is_trainee"/>
+                    </group>
+                    <group>
+                        <field name="workspace_ids"/>
                     </group>
                 </page>
             </page>
         </field>
     </record>
+
     <record id="view_employee_tree" model="ir.ui.view">
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_tree"/>
@@ -25,6 +35,7 @@
             </field>
         </field>
     </record>
+
     <record id="view_employee_filter" model="ir.ui.view">
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_filter"/>
@@ -38,4 +49,5 @@
             </filter>
         </field>
     </record>
+
 </odoo>
