--- a/sysadmin_base/views/product_template_views.xml
+++ b/sysadmin_base/views/product_template_views.xml
@@ -30,6 +30,7 @@
                             <field name="hardware_properties" invisible="1"/>
                         </group>
                         <group name="hardware_properties" string="Hardware Properties" attrs="{'invisible':[('hardware_properties','=',False)]}">
+                            <field name="microsoft_office_mail"/>
                             <field name="cpu" placeholder="iX-XXXXNN / AMD XXXXX X / etc"/>
                             <field name="ram"/>
                             <field name="data_storage" placeholder="1TB-HDD / 512GB-SSD"/>
