--- a/sysadmin_base/views/hr_employee_views.xml
+++ b/sysadmin_base/views/hr_employee_views.xml
@@ -8,18 +8,27 @@
         <field name="arch" type="xml">
             <page name="public" position="after">
                 <page name="internal_tools" string="Internal Tools">
-                    <button class="oe_stat_button" name="employee_item_count" icon="fa-th-list" type="object">
-                        <div class="o_field_widget o_stat_info">
-                            <span class="o_stat_text"> Items</span>
-                        </div>
-                    </button>
                     <group>
                         <field name="has_dialoga_access"/>
                         <field name="is_trainee"/>
                     </group>
-                    <group>
-                        <field name="workspace_ids"/>
-                    </group>
+                    <notebook>
+                        <page name="employee_workspaces" string="Workspaces">
+                            <field name="workspace_ids" context="{'default_employee_id': active_id}"/>
+                        </page>
+                        <page name="employee_items" string="Items">
+                            <field name="item_ids" context="{'default_employee_id': active_id}">
+                                <tree>
+                                    <field name="name"/>
+                                    <field name="sn"/>
+                                    <field name="product_id"/>
+                                    <field name="workspace_id"/>
+                                    <field name="workspace_location"/>
+                                    <field name="subsidy_id"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
                 </page>
             </page>
         </field>
