--- a/sysadmin_base/views/sysadmin_menu_views.xml
+++ b/sysadmin_base/views/sysadmin_menu_views.xml
@@ -9,6 +9,13 @@
         <field name="context">{'search_default_internal_equipment':1}</field>
     </record>
 
+    <record id="action_list_categories" model="ir.actions.act_window">
+        <field name="name">Product categories</field>
+        <field name="res_model">product.category</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_id" ref="product.product_category_list_view"/>
+    </record>
+
     <record id="action_list_employees" model="ir.actions.act_window">
         <field name="name">Employees</field>
         <field name="res_model">hr.employee</field>
@@ -18,29 +25,39 @@
     <record id="action_list_workspaces" model="ir.actions.act_window">
         <field name="name">Workspaces</field>
         <field name="res_model">workspace.workspace</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
     </record>
 
     <record id="action_list_items" model="ir.actions.act_window">
         <field name="name">Items</field>
         <field name="res_model">workspace.item</field>
+        <field name="view_mode">tree,form,pivot</field>
+    </record>
+
+    <record id="action_list_subsidies" model="ir.actions.act_window">
+        <field name="name">Subsidies</field>
+        <field name="res_model">workspace.item.subsidy</field>
         <field name="view_mode">tree,form</field>
     </record>
 
-    <record id="action_list_workspace_items" model="ir.actions.act_window">
-        <field name="name">Workspace Items</field>
+    <record id="action_list_employee_workspace_items" model="ir.actions.act_window">
+        <field name="name">My Workspace Items</field>
         <field name="res_model">workspace.item</field>
         <field name="view_mode">kanban</field>
         <field name="domain">[('workspace_id.employee_ids.user_id', '=', uid)]</field>
     </record>
 
 
-    <menuitem id="menu_sysadmin_root" name="SysAdmin" groups="group_sysadmin,group_workspace"/>
+    <menuitem id="menu_sysadmin_root" name="SysAdmin" groups="group_sysadmin_sysadmin,group_sysadmin_employee"/>
 
-    <menuitem id="menu_internal_equipment_products" name="Catalogue" parent="menu_sysadmin_root" groups="group_sysadmin" action="action_list_catalogue" sequence="1"/>
-    <menuitem id="menu_employees" name="Employees" parent="menu_sysadmin_root" groups="group_sysadmin" action="action_list_employees" sequence="2"/>
-    <menuitem id="menu_workspaces" name="Workspaces" parent="menu_sysadmin_root" groups="group_sysadmin" action="action_list_workspaces" sequence="3"/>
-    <menuitem id="menu_items" name="Items" parent="menu_sysadmin_root" groups="group_sysadmin" action="action_list_items" sequence="4"/>
-    <menuitem id="menu_workspace_items" name="Workspace Items" parent="menu_sysadmin_root" groups="group_workspace" action="action_list_workspace_items" sequence="5"/>
+    <menuitem id="menu_sysadmin_products" name="Products" parent="menu_sysadmin_root" groups="group_sysadmin_sysadmin" sequence="1"/>
+    <menuitem id="menu_internal_equipment_products" name="Catalogue" parent="menu_sysadmin_products" groups="group_sysadmin_sysadmin" action="action_list_catalogue" sequence="1"/>
+    <menuitem id="menu_sysadmin_product_category" name="Product categories" parent="menu_sysadmin_products" groups="group_sysadmin_sysadmin" action="action_list_categories" sequence="2"/>
+    
+    <menuitem id="menu_employees" name="Employees" parent="menu_sysadmin_root" groups="group_sysadmin_sysadmin" action="action_list_employees" sequence="2"/>
+    <menuitem id="menu_workspaces" name="Workspaces" parent="menu_sysadmin_root" groups="group_sysadmin_sysadmin" action="action_list_workspaces" sequence="3"/>
+    <menuitem id="menu_items" name="Items" parent="menu_sysadmin_root" groups="group_sysadmin_sysadmin" action="action_list_items" sequence="4"/>
+    <menuitem id="menu_subsidies" name="Subsidies" parent="menu_sysadmin_root" groups="group_sysadmin_sysadmin" action="action_list_subsidies" sequence="5"/>
+    <menuitem id="menu_employee_workspace_items" name="My Workspace Items" parent="menu_sysadmin_root" groups="group_sysadmin_sysadmin,group_sysadmin_employee" action="action_list_employee_workspace_items" sequence="6"/>
 
 </odoo>
