--- a/sysadmin_base/views/workspace_views.xml
+++ b/sysadmin_base/views/workspace_views.xml
@@ -36,39 +36,74 @@
                     </h1>
                     <group>
                         <field name="description"/>
+                        <field name="location"/>
                     </group>
-                    <notebook>
-                        <page string="Information" name="workspace_information">
-                            <group>
-                                <field name="location"/>
-                            </group>
-                        </page>
-                        <page string="Employees" name="workspace_employees">
-                            <field name="employee_ids">
-                                <tree>
-                                    <field name="name"/>
-                                    <field name="has_dialoga_access"/>
-                                    <field name="is_trainee"/>
-                                    <field name="work_email"/>
-                                </tree>
-                            </field>
-                        </page>
-                    </notebook>
+                    <field name="employee_ids" context="{'default_workspace_id': active_id}">
+                        <tree>
+                            <field name="name"/>
+                            <field name="has_dialoga_access"/>
+                            <field name="is_trainee"/>
+                            <field name="work_email"/>
+                        </tree>
+                    </field>
                 </sheet>
             </form>
         </field>
     </record>
 
-    <!-- <record id="workspace_item_view_search" model="ir.ui.view">
+    <record id="workspace_workspace_view_kanban" model="ir.ui.view">
+        <field name="name">workspace.workspace.view.kanban</field>
+        <field name="model">workspace.workspace</field>
+        <field name="arch" type="xml">
+            <kanban string="Workspaces">
+                <field name="name"/>
+                <field name="item_count"/>
+                <field name="location"/>
+                <field name="employee_count"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_global_click">
+                            <div t-attf-class="oe_kanban_content">
+                                <h3>
+                                    <field name="name"/>
+                                </h3>
+                                <b>Workspace location:</b>
+                                <field name="location"/>
+                                <br/>
+                                <b>Item count:</b>
+                                <field name="item_count"/>
+                                <br/>
+                                <b>Employee count:</b>
+                                <field name="employee_count"/>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
+    <record id="workspace_workspace_view_search" model="ir.ui.view">
+        <field name="name">workspace.workspace.view.search</field>
+        <field name="model">workspace.workspace</field>
+        <field name="arch" type="xml">
+            <search string="Workspaces">
+                <filter string="Location" name="workspace_location" context="{'group_by':'location'}"/>
+            </search>
+        </field>
+    </record>
+
+    <record id="workspace_item_view_search" model="ir.ui.view">
         <field name="name">workspace.item.view.search</field>
         <field name="model">workspace.item</field>
         <field name="arch" type="xml">
             <search string="Items">
                 <filter string="Workspaces" name="workspace_items" context="{'group_by':'workspace_id'}"/>
                 <filter string="Products" name="product_items" context="{'group_by':'product_id'}"/>
+                <filter string="Employee" name="employee_items" context="{'group_by':'employee_id'}"/>
             </search>
         </field>
-    </record> -->
+    </record>
 
     <record id="workspace_item_view_kanban" model="ir.ui.view">
         <field name="name">workspace.item.view.kanban</field>
@@ -77,14 +112,24 @@
             <kanban string="Items" default_group_by="workspace_id">
                 <field name="name"/>
                 <field name="sn"/>
+                <field name="employee_id"/>
+                <field name="workspace_location"/>
                 <templates>
                     <t t-name="kanban-box">
-                        <div t-attf-class="oe_kanban_content">
-                            <b>Name:</b>
-                            <field name="name"/>
-                            <br/>
-                            <b>SN:</b>
-                            <field name="sn"/>
+                        <div class="oe_kanban_global_click">
+                            <div t-attf-class="oe_kanban_content">
+                                <h3>
+                                    <field name="name"/>
+                                </h3>
+                                <b>SN:</b>
+                                <field name="sn"/>
+                                <br/>
+                                <b>Employee:</b>
+                                <field name="employee_id"/>
+                                <br/>
+                                <b>Workspace location:</b>
+                                <field name="workspace_location"/>
+                            </div>
                         </div>
                     </t>
                 </templates>
@@ -102,6 +147,15 @@
                 <field name="sn"/>
                 <field name="product_id"/>
                 <field name="workspace_id"/>
+                <field name="workspace_location"/>
+                <field name="employee_id"/>
+                <field name="subsidy_id"/>
+                <field name="cpu"/>
+                <field name="ram"/>
+                <field name="data_storage"/>
+                <field name="ip"/>
+                <field name="os_version"/>
+                <field name="microsoft_office_mail"/>
             </tree>
         </field>
     </record>
@@ -116,17 +170,64 @@
                         <field name="name"/>
                     </h1>
                     <group>
-                        <field name="description"/>
-                    </group>
-                    <group>
-                        <field name="sn"/>
-                    </group>
-                    <group>
-                        <field name="product_id"/>
-                        <field name="workspace_id"/>
+                        <group string="Information">
+                            <field name="description"/>
+                            <field name="sn"/>
+                            <field name="product_id"/>
+                            <field name="workspace_id"/>
+                            <field name="workspace_location"/>
+                            <field name="employee_id"/>
+                            <field name="subsidy_id"/>
+                        </group>
+                        <field name="hardware_properties" invisible="1"/>
+                        <group name="show_hardware_properties" string="Hardware Properties" attrs="{'invisible':[('hardware_properties','=',False)]}">
+                            <field name="cpu" placeholder="iX-XXXXNN / AMD XXXXX X / etc"/>
+                            <field name="ram"/>
+                            <field name="data_storage" placeholder="1TB-HDD / 512GB-SSD"/>
+                            <field name="ip" placeholder="X.X.X.X"/>
+                            <field name="os_version"/>
+                            <field name="microsoft_office_mail"/>
+                        </group>
                     </group>
                 </sheet>
             </form>
+        </field>
+    </record>
+
+    <record id="workspace_subsidy_view_form" model="ir.ui.view">
+        <field name="name">workspace.item.subsidy.view.form</field>
+        <field name="model">workspace.item.subsidy</field>
+        <field name="arch" type="xml">
+            <form string="Subsidy">
+                <sheet>
+                    <h1>
+                        <field name="name"/>
+                    </h1>
+                    <group>
+                        <field name="item_ids" context="{'default_subsidy_id': active_id}">
+                            <tree>
+                                <field name="name"/>
+                                <field name="sn"/>
+                                <field name="product_id"/>
+                                <field name="workspace_id"/>
+                                <field name="workspace_location"/>
+                                <field name="employee_id"/>
+                            </tree>
+                        </field>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="workspace_subsidy_view_tree" model="ir.ui.view">
+        <field name="name">workspace.item.subsidy.view.tree</field>
+        <field name="model">workspace.item.subsidy</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="item_ids"/>
+            </tree>
         </field>
     </record>
 
