--- a/sysadmin_base/views/workspace_views.xml
+++ b/sysadmin_base/views/workspace_views.xml
@@ -204,6 +204,10 @@
                         <field name="name"/>
                     </h1>
                     <group>
+                        <field name="description"/>
+                        <field name="date"/>
+                    </group>
+                    <group>
                         <field name="item_ids" context="{'default_subsidy_id': active_id}">
                             <tree>
                                 <field name="name"/>
@@ -226,6 +230,8 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="name"/>
+                <field name="description"/>
+                <field name="date"/>
                 <field name="item_ids"/>
             </tree>
         </field>
