--- a/sysadmin_base/views/hr_employee_views.xml
+++ b/sysadmin_base/views/hr_employee_views.xml
@@ -6,8 +6,15 @@
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="type">form</field>
         <field name="arch" type="xml">
+            <div name="button_box" position="inside">
+                <button class="oe_stat_button" name="button_employee_items" icon="fa-th-list" type="object">
+                    <div class="o_field_widget o_stat_info">
+                        <span class="o_stat_text">My Items</span>
+                    </div>
+                </button>
+            </div>
             <page name="public" position="after">
-                <page name="internal_tools" string="Internal Tools">
+                <page name="internal_tools" string="Internal Tools" groups="sysadmin_base.group_sysadmin_sysadmin">
                     <group>
                         <field name="has_dialoga_access"/>
                         <field name="is_trainee"/>
@@ -17,6 +24,7 @@
                             <field name="item_ids" context="{'default_employee_id': active_id}">
                                 <tree>
                                     <field name="name"/>
+                                    <field name="count"/>
                                     <field name="sn"/>
                                     <field name="product_id"/>
                                     <field name="workspace_id"/>
@@ -31,8 +39,12 @@
                                     <field name="name"/>
                                     <field name="description"/>
                                     <field name="location"/>
+                                    <field name="workspace_id"/>
                                     <field name="item_ids"/>
                                     <field name="employee_ids"/>
+                                    <field name="employee_item_count"/>
+                                    <field name="workspace_ids"/>
+                                    <field name="internal_item_count"/>
                                 </tree>
                             </field>
                         </page>
