--- a/sysadmin_base/views/workspace_item_subsidy_views.xml
+++ b/sysadmin_base/views/workspace_item_subsidy_views.xml
@@ -17,11 +17,13 @@
                         <field name="item_ids" context="{'default_subsidy_id': active_id}">
                             <tree>
                                 <field name="name"/>
+                                <field name="count"/>
                                 <field name="sn"/>
                                 <field name="product_id"/>
                                 <field name="workspace_id"/>
                                 <field name="workspace_location"/>
                                 <field name="employee_id"/>
+                                <field name="employee_location"/>
                             </tree>
                         </field>
                     </group>
