--- a/sysadmin_base/views/hr_employee_views.xml
+++ b/sysadmin_base/views/hr_employee_views.xml
@@ -9,7 +9,7 @@
             <div name="button_box" position="inside">
                 <button class="oe_stat_button" name="button_employee_items" icon="fa-th-list" type="object">
                     <div class="o_field_widget o_stat_info">
-                        <span class="o_stat_text">My Items</span>
+                        <span class="o_stat_text">Employee's Items</span>
                     </div>
                 </button>
             </div>
