--- a/sysadmin_base/views/product_category_views.xml
+++ b/sysadmin_base/views/product_category_views.xml
@@ -13,9 +13,9 @@
         </field>
     </record>
 
-    <record id="product_template_search_form_view_stock" model="ir.ui.view">
+    <record id="product_template_search_view" model="ir.ui.view">
         <field name="model">product.template</field>
-        <field name="inherit_id" ref="stock.product_template_search_form_view_stock"/>
+        <field name="inherit_id" ref="product.product_template_search_view"/>
         <field name="arch" type="xml">
             <filter name="activities_upcoming_all" position="after">
                 <separator/>
