Cambio nombre propiedad de elemento y traducciones

--- a/sysadmin_base/views/workspace_workspace_views.xml
+++ b/sysadmin_base/views/workspace_workspace_views.xml
@@ -57,7 +57,7 @@
                                 <tree>
                                     <field name="name"/>
                                     <field name="description"/>
-                                    <field name="count"/>
+                                    <field name="amount"/>
                                     <field name="sn"/>
                                     <field name="product_id"/>
                                     <field name="subsidy_id"/>
