--- a/sysadmin_base/views/hr_employee_views.xml
+++ b/sysadmin_base/views/hr_employee_views.xml
@@ -24,7 +24,7 @@
                             <field name="item_ids" context="{'default_employee_id': active_id}">
                                 <tree>
                                     <field name="name"/>
-                                    <field name="count"/>
+                                    <field name="amount"/>
                                     <field name="sn"/>
                                     <field name="product_id"/>
                                     <field name="workspace_id"/>
