--- a/sysadmin_base/views/sysadmin_menu_views.xml
+++ b/sysadmin_base/views/sysadmin_menu_views.xml
@@ -6,7 +6,7 @@
         <field name="res_model">product.template</field>
         <field name="view_mode">kanban,tree,form</field>
         <field name="search_view_id" ref="product.product_template_search_view"/>
-        <field name="context">{'search_default_internal_equipment':1}</field>
+        <field name="context">{'search_default_internal_equipment':1,'default_internal_equipment':1,'default_sale_ok':0,'default_type':'product'}</field>
     </record>
 
     <record id="action_list_categories" model="ir.actions.act_window">
