Recuento item en empleado, workspace y subvención

--- a/sysadmin_base/views/workspace_workspace_views.xml
+++ b/sysadmin_base/views/workspace_workspace_views.xml
@@ -9,7 +9,7 @@
                 <field name="description"/>
                 <field name="location"/>
                 <field name="workspace_id"/>
-                <field name="item_ids"/>
+                <field name="item_count"/>
                 <field name="employee_ids"/>
                 <field name="employee_item_count"/>
                 <field name="workspace_ids"/>
@@ -57,7 +57,7 @@
                                 <tree>
                                     <field name="name"/>
                                     <field name="description"/>
-                                    <field name="amount"/>
+                                    <field name="amount" sum="Total amount"/>
                                     <field name="sn"/>
                                     <field name="product_id"/>
                                     <field name="subsidy_id"/>
@@ -72,7 +72,7 @@
                                     <field name="is_trainee"/>
                                     <field name="work_location"/>
                                     <field name="work_email"/>
-                                    <field name="item_ids"/>
+                                    <field name="item_count"/>
                                     <field name="workspace_ids"/>
                                 </tree>
                             </field>
@@ -83,7 +83,7 @@
                                     <field name="name"/>
                                     <field name="description"/>
                                     <field name="location"/>
-                                    <field name="item_ids"/>
+                                    <field name="item_count"/>
                                     <field name="employee_ids"/>
                                     <field name="employee_item_count"/>
                                     <field name="workspace_ids"/>
@@ -104,6 +104,7 @@
                 <field name="name"/>
                 <field name="workspace_id"/>
                 <field name="item_ids"/>
+                <field name="item_count"/>
                 <field name="internal_item_count"/>
                 <field name="employee_count"/>
                 <field name="workspace_ids"/>
@@ -116,7 +117,7 @@
                                 </h3>
                                 <div attrs="{'invisible':[('item_ids','=',())]}">
                                     <b>Items:</b>
-                                    <field name="item_ids"/>
+                                    <field name="item_count"/>
                                 </div>
                                 <div attrs="{'invisible':[('employee_count','=',0)]}">
                                     <p/>
