--- a/sysadmin_base/views/hr_employee_views.xml
+++ b/sysadmin_base/views/hr_employee_views.xml
@@ -24,7 +24,7 @@
                             <field name="item_ids" context="{'default_employee_id': active_id}">
                                 <tree>
                                     <field name="name"/>
-                                    <field name="amount"/>
+                                    <field name="amount" sum="Total amount"/>
                                     <field name="sn"/>
                                     <field name="product_id"/>
                                     <field name="workspace_id"/>
@@ -40,7 +40,7 @@
                                     <field name="description"/>
                                     <field name="location"/>
                                     <field name="workspace_id"/>
-                                    <field name="item_ids"/>
+                                    <field name="item_count"/>
                                     <field name="employee_ids"/>
                                     <field name="employee_item_count"/>
                                     <field name="workspace_ids"/>
