--- a/sysadmin_base/views/workspace_item_views.xml
+++ b/sysadmin_base/views/workspace_item_views.xml
@@ -31,7 +31,7 @@
                                     <b>SN:</b>
                                     <field name="sn"/>
                                 </div>
-                                <div attrs="{'invisible':[('amount','=',False)]}">
+                                <div attrs="{'invisible':[('amount','&lt;',2)]}">
                                     <b>Amount:</b>
                                     <field name="amount"/>
                                 </div>
@@ -52,7 +52,7 @@
             <tree string="Item">
                 <field name="name"/>
                 <field name="description"/>
-                <field name="amount"/>
+                <field name="amount" sum="Total amount"/>
                 <field name="sn"/>
                 <field name="product_id"/>
                 <field name="workspace_id"/>
