--- a/sysadmin_base/views/workspace_item_subsidy_views.xml
+++ b/sysadmin_base/views/workspace_item_subsidy_views.xml
@@ -17,6 +17,7 @@
                         <field name="item_ids" context="{'default_subsidy_id': active_id}">
                             <tree>
                                 <field name="name"/>
+                                <field name="internal_reference"/>
                                 <field name="amount" sum="Total amount"/>
                                 <field name="sn"/>
                                 <field name="product_id"/>
