--- a/sysadmin_base/views/workspace_workspace_views.xml
+++ b/sysadmin_base/views/workspace_workspace_views.xml
@@ -56,6 +56,7 @@
                             <field name="item_ids" context="{'default_workspace_id': active_id}">
                                 <tree>
                                     <field name="name"/>
+                                    <field name="internal_reference"/>
                                     <field name="description"/>
                                     <field name="amount" sum="Total amount"/>
                                     <field name="sn"/>
@@ -68,7 +69,7 @@
                             <field name="employee_ids" options="{'no_create': True}">
                                 <tree create="true">
                                     <field name="name"/>
-                                    <field name="has_dialoga_access"/>
+                                    <field name="has_voip_switchboard_access"/>
                                     <field name="is_trainee"/>
                                     <field name="work_location"/>
                                     <field name="work_email"/>
