Quitar uso de categoría. Compañía en elementos

--- a/sysadmin_base/views/hr_employee_views.xml
+++ b/sysadmin_base/views/hr_employee_views.xml
@@ -32,6 +32,7 @@
                                     <field name="workspace_id"/>
                                     <field name="workspace_location"/>
                                     <field name="subsidy_id"/>
+                                    <field name="company"/>
                                 </tree>
                             </field>
                         </page>
