--- a/sysadmin_base/views/product_template_views.xml
+++ b/sysadmin_base/views/product_template_views.xml
@@ -34,4 +34,15 @@
         </field>
     </record>
 
+    <record id="product_template_search_view" model="ir.ui.view">
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="product.product_template_search_view"/>
+        <field name="arch" type="xml">
+            <filter name="activities_upcoming_all" position="after">
+                <separator/>
+                <filter string="Internal Equipment" name="internal_equipment" domain="[('internal_equipment','=',True)]"/>
+            </filter>
+        </field>
+    </record>
+
 </odoo>
