--- a/sysadmin_base/views/sysadmin_menu_views.xml
+++ b/sysadmin_base/views/sysadmin_menu_views.xml
@@ -6,14 +6,14 @@
         <field name="res_model">product.template</field>
         <field name="view_mode">kanban,tree,form</field>
         <field name="search_view_id" ref="product.product_template_search_view"/>
-        <field name="context">{'search_default_internal_equipment':1,'default_internal_equipment':1,'default_sale_ok':0,'default_type':'product','search_default_group_categ_id': 1}</field>
-    </record>
-
-    <record id="action_list_categories" model="ir.actions.act_window">
-        <field name="name">Product categories</field>
-        <field name="res_model">product.category</field>
-        <field name="view_mode">tree,form</field>
-        <field name="view_id" ref="product.product_category_list_view"/>
+        <field name="context">{
+            'search_default_internal_equipment':1,
+            'default_internal_equipment':1,
+            'default_comission_free':0,
+            'default_sale_ok':0,
+            'default_purchase_ok':0,
+            'default_type':'consu',
+            'search_default_group_categ_id': 1,}</field>
     </record>
 
     <record id="action_list_employees" model="ir.actions.act_window">
@@ -51,7 +51,6 @@
 
     <menuitem id="menu_sysadmin_products" name="Products" parent="menu_sysadmin_root" sequence="1" groups="group_sysadmin_sysadmin"/>
     <menuitem id="menu_internal_equipment_products" name="Catalogue" parent="menu_sysadmin_products" action="action_list_catalogue" sequence="1"/>
-    <menuitem id="menu_sysadmin_product_category" name="Product categories" parent="menu_sysadmin_products" action="action_list_categories" sequence="2"/>
     
     <menuitem id="menu_employees" name="Employees" parent="menu_sysadmin_root" action="action_list_employees" sequence="2" groups="group_sysadmin_sysadmin"/>
     <menuitem id="menu_workspaces" name="Workspaces" parent="menu_sysadmin_root" action="action_list_workspaces" sequence="3" groups="group_sysadmin_sysadmin"/>
