--- a/sysadmin_base/views/workspace_item_subsidy_views.xml
+++ b/sysadmin_base/views/workspace_item_subsidy_views.xml
@@ -25,6 +25,7 @@
                                 <field name="workspace_location"/>
                                 <field name="employee_id"/>
                                 <field name="employee_location"/>
+                                <field name="company"/>
                             </tree>
                         </field>
                     </group>
