--- a/sysadmin_base/views/workspace_item_views.xml
+++ b/sysadmin_base/views/workspace_item_views.xml
@@ -7,6 +7,7 @@
                 <filter string="Workspaces" name="workspace_items" context="{'group_by':'workspace_id'}"/>
                 <filter string="Products" name="product_items" context="{'group_by':'product_id'}"/>
                 <filter string="Employee" name="employee_items" context="{'group_by':'employee_id'}"/>
+                <filter string="Company" name="company_items" context="{'group_by':'company'}"/>
             </search>
         </field>
     </record>
@@ -62,6 +63,7 @@
                 <field name="employee_id"/>
                 <field name="employee_location"/>
                 <field name="subsidy_id"/>
+                <field name="company"/>
                 <field name="cpu"/>
                 <field name="ram"/>
                 <field name="data_storage"/>
@@ -88,7 +90,7 @@
                             <field name="sn"/>
                         </group>
                         <group>
-                            <field name="product_id" context="{'default_internal_equipment':1,'default_sale_ok':0,'default_type':'product'}"/>
+                            <field name="product_id" context="{'default_internal_equipment':1,'default_comission_free':0,'default_sale_ok':0,'default_purchase_ok':0,'default_type':'consu'}"/>
                         </group>
                         <group>
                             <field name="workspace_id"/>
@@ -100,10 +102,10 @@
                         </group>
                         <group>
                             <field name="subsidy_id"/>
+                            <field name="company"/>
                         </group>
                     </group>
-                    <field name="hardware_properties" invisible="1"/>
-                    <group name="show_hardware_properties" string="Hardware Properties" attrs="{'invisible':[('hardware_properties','=',False)]}">
+                    <group name="show_hardware_properties" string="Hardware Properties">
                         <field name="cpu" placeholder="iX-XXXXNN / AMD XXXXX X / etc"/>
                         <field name="ram"/>
                         <field name="data_storage" placeholder="1TB-HDD / 512GB-SSD"/>
