--- a/sysadmin_base/views/workspace_item_subsidy_views.xml
+++ b/sysadmin_base/views/workspace_item_subsidy_views.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
-    
     <record id="workspace_subsidy_view_form" model="ir.ui.view">
         <field name="model">workspace.item.subsidy</field>
         <field name="arch" type="xml">
@@ -17,9 +16,8 @@
                         <field name="item_ids" context="{'default_subsidy_id': active_id}">
                             <tree>
                                 <field name="name"/>
+                                <field name="description"/>
                                 <field name="internal_reference"/>
-                                <field name="sn"/>
-                                <field name="product_id"/>
                                 <field name="workspace_id"/>
                                 <field name="workspace_location"/>
                                 <field name="employee_id"/>
@@ -29,10 +27,13 @@
                         </field>
                     </group>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="message_ids" widget="mail_thread"/>
+                </div>
             </form>
         </field>
     </record>
-
     <record id="workspace_subsidy_view_tree" model="ir.ui.view">
         <field name="model">workspace.item.subsidy</field>
         <field name="arch" type="xml">
@@ -44,5 +45,4 @@
             </tree>
         </field>
     </record>
-    
 </odoo>
