--- a/sysadmin_base/views/workspace_item_views.xml
+++ b/sysadmin_base/views/workspace_item_views.xml
@@ -8,10 +8,10 @@
                 <filter string="Products" name="product_items" context="{'group_by':'product_id'}"/>
                 <filter string="Employee" name="employee_items" context="{'group_by':'employee_id'}"/>
                 <filter string="Company" name="company_items" context="{'group_by':'company'}"/>
+                <filter string="Is bookable" name="bookable_items" domain="[('is_bookable','=',True)]"/>
             </search>
         </field>
     </record>
-
     <record id="workspace_item_view_kanban" model="ir.ui.view">
         <field name="model">workspace.item</field>
         <field name="arch" type="xml">
@@ -26,6 +26,7 @@
                         <div class="oe_kanban_global_click">
                             <div t-attf-class="oe_kanban_content">
                                 <h3>
+                                    <field name="internal_reference"/>
                                     <field name="name"/>
                                 </h3>
                                 <div attrs="{'invisible':[('sn','=',False)]}">
@@ -42,7 +43,6 @@
             </kanban>
         </field>
     </record>
-
     <record id="workspace_item_view_tree" model="ir.ui.view">
         <field name="model">workspace.item</field>
         <field name="arch" type="xml">
@@ -50,24 +50,15 @@
                 <field name="name"/>
                 <field name="description"/>
                 <field name="internal_reference"/>
-                <field name="sn"/>
-                <field name="product_id"/>
                 <field name="workspace_id"/>
                 <field name="workspace_location"/>
                 <field name="employee_id"/>
                 <field name="employee_location"/>
                 <field name="subsidy_id"/>
                 <field name="company"/>
-                <field name="cpu"/>
-                <field name="ram"/>
-                <field name="data_storage"/>
-                <field name="ip"/>
-                <field name="os_version"/>
-                <field name="microsoft_office_mail"/>
             </tree>
         </field>
     </record>
-
     <record id="workspace_item_view_form" model="ir.ui.view">
         <field name="model">workspace.item</field>
         <field name="arch" type="xml">
@@ -76,39 +67,60 @@
                     <h1>
                         <field name="name"/>
                     </h1>
-                    <group string="Information">
+                    <group>
                         <field name="description"/>
-                        <group>
-                            <field name="internal_reference"/>
-                            <field name="sn"/>
-                        </group>
-                        <group>
-                            <field name="product_id" context="{'default_internal_equipment':1,'default_comission_free':0,'default_sale_ok':0,'default_purchase_ok':0,'default_type':'consu'}"/>
-                        </group>
-                        <group>
-                            <field name="workspace_id"/>
-                            <field name="workspace_location"/>
-                        </group>
-                        <group>
-                            <field name="employee_id"/>
-                            <field name="employee_location"/>
-                        </group>
-                        <group>
-                            <field name="subsidy_id"/>
-                            <field name="company"/>
-                        </group>
                     </group>
-                    <group name="show_hardware_properties" string="Hardware Properties">
-                        <field name="cpu" placeholder="iX-XXXXNN / AMD XXXXX X / etc"/>
-                        <field name="ram"/>
-                        <field name="data_storage" placeholder="1TB-HDD / 512GB-SSD"/>
-                        <field name="ip" placeholder="X.X.X.X"/>
-                        <field name="os_version"/>
-                        <field name="microsoft_office_mail"/>
-                    </group>
+                    <notebook>
+                        <page name="information" string="Information">
+                            <group>
+                                <group>
+                                    <field name="internal_reference"/>
+                                    <field name="sn"/>
+                                </group>
+                                <group>
+                                    <field name="product_id" context="{'default_internal_equipment':1,'default_comission_free':0,'default_sale_ok':0,'default_purchase_ok':0,'default_type':'consu'}" groups="sysadmin_base.group_sysadmin_sysadmin"/>
+                                </group>
+                            </group>
+                            <group>
+                                <group>
+                                    <field name="workspace_id"/>
+                                    <field name="workspace_location"/>
+                                </group>
+                                <group>
+                                    <field name="employee_id"/>
+                                    <field name="employee_location"/>
+                                </group>
+                            </group>
+                        </page>
+                        <page name="show_hardware_properties" string="Hardware Properties">
+                            <group>
+                                <field name="cpu" placeholder="iX-XXXXNN / AMD XXXXX X / etc"/>
+                                <field name="ram"/>
+                                <field name="data_storage" placeholder="1TB-HDD / 512GB-SSD"/>
+                            </group>
+                            <group>
+                                <field name="ip" placeholder="X.X.X.X"/>
+                                <field name="os_version"/>
+                                <field name="microsoft_office_mail"/>
+                            </group>
+                        </page>
+                        <page name="other" string="Others">
+                            <group>
+                                <field name="subsidy_id"/>
+                                <field name="company"/>
+                            </group>
+                            <group>
+                                <field name="is_bookable" groups="sysadmin_base.group_sysadmin_sysadmin"/>
+                            </group>
+                        </page>
+                    </notebook>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="activity_ids" widget="mail_activity"/>
+                    <field name="message_ids" widget="mail_thread"/>
+                </div>
             </form>
         </field>
     </record>
-
 </odoo>
