--- a/sysadmin_base/views/workspace_workspace_views.xml
+++ b/sysadmin_base/views/workspace_workspace_views.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
-
     <record id="workspace_workspace_view_tree" model="ir.ui.view">
         <field name="model">workspace.workspace</field>
         <field name="arch" type="xml">
@@ -17,7 +16,6 @@
             </tree>
         </field>
     </record>
-
     <record id="workspace_workspace_view_form" model="ir.ui.view">
         <field name="model">workspace.workspace</field>
         <field name="arch" type="xml">
@@ -94,10 +92,13 @@
                         </page>
                     </notebook>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="message_ids" widget="mail_thread"/>
+                </div>
             </form>
         </field>
     </record>
-
     <record id="workspace_workspace_view_kanban" model="ir.ui.view">
         <field name="model">workspace.workspace</field>
         <field name="arch" type="xml">
@@ -150,7 +151,6 @@
             </kanban>
         </field>
     </record>
-
     <record id="workspace_workspace_view_search" model="ir.ui.view">
         <field name="model">workspace.workspace</field>
         <field name="arch" type="xml">
@@ -160,5 +160,4 @@
             </search>
         </field>
     </record>
-
 </odoo>
